[package]
name = "noun"
version = "0.1.0"
authors = ["Mark Gross <mark.gross2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = [ "postgres", "chrono" ] }
chrono = "0.4.19"
dotenv = "0.15.0"
